tests/ui/rfcs/rfc-2632-const-trait-impl/tilde-const-maybe-trait.stderr
error: `~const` and `?` are mutually exclusive
  --> $DIR/tilde-const-maybe-trait.rs:3:28
   |
LL | const fn tilde_question<T: ~const ?Sized>() {}
   |                            ^^^^^^^^^^^^^

error: aborting due to previous error

