tests/ui/rfcs/rfc-2632-const-trait-impl/tilde-const-maybe-trait.rs
#![feature(const_trait_impl)]

const fn tilde_question<T: ~const ?Sized>() {}
//~^ ERROR `~const` and `?` are mutually exclusive

fn main() {}
